--- a/trading-main.html
+++ b/trading-main.html
@@ -121,6 +121,7 @@
             columnDefs: [{orderable: false, className: 'select-checkbox',targets: 0 }],
                 select: { style: 'os', selector: 'td:first-child'}
             });
+            $($.fn.dataTable.tables(true)).DataTable().columns.adjust();
       });
   </script>
 
