--- a/index.html
+++ b/index.html
@@ -11,29 +11,27 @@
   <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">TB</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
+  <!-- <nav class="white" role="navigation"> -->
+    <!-- <div class="nav-wrapper container"> -->
+      <!-- <a id="logo-container" href="#" class="brand-logo"></a> -->
+      <!-- <ul class="right hide-on-med-and-down"> -->
+        <!-- <li><a href="#"></a></li> -->
+      <!-- </ul> -->
 
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
+      <!-- <ul id="nav-mobile" class="sidenav"> -->
+        <!-- <li><a href="#"></a></li> -->
+      <!-- </ul> -->
+      <!-- <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
+    <!-- </div> -->
+  <!-- </nav> -->
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-darken-3">Trading Tips by Trading Bots Ltd Partnership & Associates</h1>
+        <h2 class="header center teal-text text-darken-3">Trading Tips by Trading Bots Ltd Partnership & Associates</h2>
         <div class="row center">
           <h5 class="header col s12 light">Heuristic-based event-driven stock trading filterning platform engine</h5>
-        </div>
-        <div class="row center">
           <a href="trading-main.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Trading platform</a>
         </div>
         <br><br>
